--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "json-server": "^0.17.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
